[tool.poetry]
name = "mountain-sounds"
version = "0.1.0"
description = ""
authors = ["Ian Webster <ianw_github@ianww.com>"]
readme = "README.md"
packages = [{include = "mountain_sounds"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
numpy = "^1.25.1"
pydub = "^0.25.1"
elevation = "^1.1.3"
rasterio = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
